Fixed issue with z-index wrapper
Wrapper was disappearing behind page elements with a z-index > 1.

--- a/css/content.sass
+++ b/css/content.sass
@@ -8,6 +8,7 @@
   white-space: nowrap
   overflow-x: auto
   overflow-y: hidden
+  z-index: 999999999
 
   -webkit-border-radius:  10px
 
